--- a/Traffic Lights/Base.lproj/Main.storyboard
+++ b/Traffic Lights/Base.lproj/Main.storyboard
@@ -16,37 +16,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="440" height="956"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="2GG-Rb-2Sg">
-                                <rect key="frame" x="146" y="107" width="148" height="524"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="39" translatesAutoresizingMaskIntoConstraints="NO" id="De2-sC-nKV">
+                                <rect key="frame" x="146" y="102" width="156" height="522"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Vy3-sj-PWQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="148" height="524"/>
-                                        <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kZB-aq-A1i">
-                                                <rect key="frame" x="0.0" y="0.0" width="148" height="148"/>
-                                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnN-VW-PR6">
-                                                <rect key="frame" x="0.0" y="188" width="148" height="148"/>
-                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wSs-2i-ORX">
-                                                <rect key="frame" x="0.0" y="376" width="148" height="148"/>
-                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="wSs-2i-ORX" secondAttribute="height" multiplier="1:1" id="WTA-gI-jTp"/>
-                                                </constraints>
-                                            </view>
-                                        </subviews>
-                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kZB-aq-A1i">
+                                        <rect key="frame" x="0.0" y="0.0" width="156" height="148"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pnN-VW-PR6">
+                                        <rect key="frame" x="0.0" y="187" width="156" height="148"/>
+                                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wSs-2i-ORX">
+                                        <rect key="frame" x="0.0" y="374" width="156" height="148"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="wSs-2i-ORX" secondAttribute="height" multiplier="1:1" id="WTA-gI-jTp"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="148" id="N8b-z8-wCL"/>
-                                    <constraint firstAttribute="height" constant="524" id="XBU-XS-3NH"/>
-                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M3N-Tp-fP0">
-                                <rect key="frame" x="164" y="836" width="112" height="35"/>
+                                <rect key="frame" x="164" y="888" width="120" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="START">
                                     <backgroundConfiguration key="background">
@@ -63,11 +54,14 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2GG-Rb-2Sg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="16g-sh-iLR"/>
-                            <constraint firstItem="2GG-Rb-2Sg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="45" id="BJE-mM-ydE"/>
-                            <constraint firstItem="M3N-Tp-fP0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="164" id="H8s-GB-TtA"/>
-                            <constraint firstItem="M3N-Tp-fP0" firstAttribute="centerX" secondItem="2GG-Rb-2Sg" secondAttribute="centerX" id="UVg-h0-5C5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="M3N-Tp-fP0" secondAttribute="bottom" constant="51" id="xJC-wp-kXx"/>
+                            <constraint firstItem="De2-sC-nKV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="46d-9s-6oU"/>
+                            <constraint firstItem="M3N-Tp-fP0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="164" id="6Yf-6b-R95"/>
+                            <constraint firstItem="kZB-aq-A1i" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="37:239" id="KIJ-Iy-4pt"/>
+                            <constraint firstItem="De2-sC-nKV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="146" id="NOh-eI-trb"/>
+                            <constraint firstItem="De2-sC-nKV" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.517782" id="O5m-Ry-dg7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="M3N-Tp-fP0" secondAttribute="bottom" constant="51" id="Zo6-Ax-e4z"/>
+                            <constraint firstItem="De2-sC-nKV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="iPA-2H-ddg"/>
+                            <constraint firstItem="De2-sC-nKV" firstAttribute="centerX" secondItem="M3N-Tp-fP0" secondAttribute="centerX" id="rfb-xP-U94"/>
                         </constraints>
                     </view>
                     <connections>
